# Computer_graphics

./: .gitignore  CMakeLists.txt  project1.cpp
Project 1/: CMakeLists.txt  README.md  project1.cpp
Project 2/: CMakeLists.txt  README.md  project2.cpp
Project 3/: CMakeLists.txt  README.md  project3.cpp
